syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ceit.desktop.grpc";
option java_outer_classname = "NetManagerProto";
option objc_class_prefix = "HLW";

package netmanage;

service NetManage {
  rpc NetManager (TerminalLogOffRequest) returns (TerminalLogOffReply) {}
  rpc TerminalCollect (TerminalCollectRequest) returns (TerminalCollectReply) {}
  rpc SoftExceptionHandle(SoftInfoRequest) returns (SoftInfoReply) {}
  rpc BlacklistPush (BlacklistPushRequest) returns (BlacklistPushReply) {}
  rpc TerminalPushNotice (TerminalNotice) returns (TerminalNotice) {}
  rpc test (testRequest) returns (testReply) {}
}

message TerminalLogOffRequest {
  int32 status = 1;
  string reason = 2;
  string dev_ip = 3;
  string dev_name =4;
}

//这个也作为发送给终端的管控通知消息
message TerminalLogOffReply {
  int32 status = 1;
  string reason = 2;
}

message TerminalCollectRequest {
  int32 type = 1;
  string dev_ip = 2;
}

message TerminalCollectReply {
  int32 status = 1;
  string result = 2;
}

message SoftInfoRequest {
  int32 type = 1;
  string filename = 2;
  string hash = 3;
  string install_time = 4;
  string modify_time = 5;
  string dev_ip = 6;
  string time = 7;
  int32 flag = 8;
}

message SoftInfoReply {
  int32 status = 1;
  string result = 2;
}

message BlacklistPushRequest {
  int32 type = 1;
  string dev_ip = 2;
}

message BlacklistPushReply {
  int32 status = 1;
  string result = 2;
}

message TerminalConfig {
  int32 sw_change = 1;
  int32 sw_ps = 2;
  int32 sw_change_c = 3;
  int32 sw_ps_c = 4;
  int32 device_c = 5;
}

message TerminalNotice {
  int32 type = 1;
  string msg = 2;
}

message TerminalNoticeRequest {
  string msg = 1;
  string dev_ip = 2;
  int32 type = 3;
}

message testRequest{
  int64 req = 1;
}
message testReply{
  string rep = 1;
}